css/styles.css
html, body, form {
    font-family: 'Open Sans', 'Segoe UI', Helvetica, Verdana, Arial, sans-serif;
    font-weight: 300;
    background-color: #eee;
    outline: none;
    color: #777;
    height: 100%;
}

body > .container-fluid {
    height: calc(100% - 50px);
    overflow-y: auto;
    min-width: 1460px;
    padding: 0;
    margin-top: 50px;
}

.navbar {
    background-image: none;
    padding: 0 20px;
    color: white;
    background-color: #2394F5;
}

.navbar .navbar-title {
    font-size: 24px;
    padding-top: 8px;
}

.navbar-inverse .navbar-nav>li>a {
  color: white;
}

.navbar-fixed-top {
    border: 0;
}

.list-unstyled > li {
    padding: 10px;
}

#reset-button {
  float: right;
  margin-top: 20px;
}

#hide-controls {
  float: left;
  margin-top: 5px;
}

#divControls select {
  color: #454545;
}

/* Styling for popovers */
.popover > .arrow { 
  visibility: hidden;
}

/* Styling for 3D view */
#top_display_panel {
  height: 50%;
  width: 100%;
}

#three_d_plot {
  height: 100%;
  width: 35%;
  display: inline-block;
}

x3d {
  width: 100%;
  height: 100%;
  border: none;
  border-right: 1px solid #CCCCCC;

}

.control-section {
  margin-bottom: 30px;
  margin-left: 5px;
}

.control-section h1, h2, h3, h4, h5 {
  border-bottom: 1px solid #CCCCCC;
  padding-bottom: 10px;
  margin-left: 5px;
  margin-right: 10px;
  font-size: 15px;
}

#divControls {
  position: fixed;
  top:0;
  left:0;
  padding-top: 50px;
  width:415px;
  min-height: 100%;
  background: #454545;
  overflow: hidden;
  color: #CCCCCC;
  display: inline-block;
  float: left;

}

#divPlot {
  padding-top: 50px;
  margin-left:415px;
  height: 100%; 
  width: calc(100% - 415px);
  display: inline-block;
}

/* Styling for small multiples */
#small_multiples {
  display: inline-block;
  height: 100%;
  top: 0;
}

.small_multiples_chart {
  display: block;
  height: 33%;
}


/* Styling for lineage tree */
.lineage_tree {
  width: 100%;
  height: 50%;
  margin-left: auto;
  margin-right: auto;
  display: inline-block;
}

.lineage_tree svg{
  width: 100%;
}

.node {
  cursor: pointer;
}

.node text {
  font: 10px sans-serif;
  color: black;
}

.link {
  fill: none;
  stroke: #ccc;
  stroke-width: 1.5px;
}


/* Styling for slider */
input[type=range] {
  -webkit-appearance: none;
  margin: 10px 0;
  width: 200px;
  margin-right: 10px;
  display: inline;
}

input[type=range]:focus {
  outline: 0;
}

input[type=range] {
  background: none;
}

input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: 12.8px;
  cursor: pointer;
  animate: 0.2s;
  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
  background: #C0C0C0;
  border-radius: 25px;
  border: 0px solid #000101;
}
input[type=range]::-webkit-slider-thumb {
  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
  border: 0px solid #000000;
  height: 20px;
  width: 20px;
  border-radius: 20px;
  background: #2394F5;
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -3.6px;
}
input[type=range]::-moz-range-track {
  width: 100%;
  height: 12.8px;
  cursor: pointer;
  animate: 0.2s;
  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
  background: #C0C0C0;
  border-radius: 25px;
  border: 0px solid #000101;
}
input[type=range]::-moz-range-thumb {
  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
  border: 0px solid #000000;
  height: 20px;
  width: 20px;
  border-radius: 20px;
  background: #2394F5;
  cursor: pointer;
}

/* Additional styling for the distortion slider */
input[id=distortion_slider]::-webkit-slider-thumb {
  width: 100px;
  height: 25px;
  margin-top: -5px;
  border-radius: 5px;
  background: #2394F5;
  opacity: 0.9;
}

input[id=distortion_slider]::-moz-range-thumb {
  width: 100px;
  height: 25px;
  margin-top: -5px;
  border-radius: 5px;
  background: #2394F5;
  opacity: 0.9;
}

input[id=distortion_slider]{
  width: 100%;
}

#reset-button {
  margin-bottom: 0px;
  display: block;
  width: 100px;
}

#playpause {
  margin-bottom: 10px;
}

/* Styling for buttons */
#playpause, input[type="button"] {
  background-color: #2394F5;
  -moz-border-radius:28px;
  -webkit-border-radius:28px;
  border-radius:28px;
  border:1px solid #2394F5;
  display:inline-block;
  cursor:pointer;
  color:#ffffff;
  font-family:Arial;
  font-size:12px;
  width:55px;
  padding:5px 5px;
  text-decoration:none;
  text-shadow:0px 1px 0px #2f6627;
  margin-right: 10px;
  outline: 0;
}

#playpause:hover, input[type="button"]:hover {
	opacity: 0.9;
}

#playpause:active, input[type="button"]:active {
	position:relative;
	top:1px;
}

/* Overriding styling for certain buttons */
input[class="add-highlight"], input[class="removehi"] {
  width: 30px;
  padding: 0;
  font-size: 20px;
}

input[id="showhide-highlight"] {
  width: 150px;
  font-size: 12px;
  padding: 3px 3px;
}

.chosen-single .chosen-default {
  background-color: orange;
}

/* Styling for color picker input box */
input[type="text"] {
  background-color: #edf0f3;
  padding: 10px 10px 10px 10px;
  border-radius: 6px;
  border: 2px solid white;
  margin-right: 10px;
}

input[type="text"]:focus,
input[type="text"].focus {
  border: 2px solid #E6E6E6;
  outline: 0;
}

/* Styling for color picker selector */
.chosen-container {
  width: 280px !important;
}

input[type="color"] {
  border-radius: 5px;
  background-color: #FFFFFF;
  width: 40px;
  border: 1px solid #E6E6E6;
}

input[type="color"]:focus {
  outline: 0;
}

/* Styling for playback speed buttons */
.select-style {
  text-align:center;
    border: 1px solid #ccc;
    margin: 0 auto;
    position: relative;
    top: 10px;
    width: 70px;
    height: 30px;
    border-radius: 3px;
    display: inline-block;
    overflow: hidden;
    background: #fafafa url("data:image/png;base64,R0lGODlhDwAUAIABAAAAAP///yH5BAEAAAEALAAAAAAPABQAAAIXjI+py+0Po5wH2HsXzmw//lHiSJZmUAAAOw==") no-repeat 90% 50%;
}

.select-style select {
    padding: 8px;
    width: 75px;
    border: none;
    box-shadow: none;
    background: transparent;
    background-image: none;
    -webkit-appearance: none;
}

.select-style select:focus {
    outline: none;
}

